--- a/naregua/src/App.css
+++ b/naregua/src/App.css
@@ -8,7 +8,6 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: rgba(57, 48, 50, 0.527);
   border-radius: 3rem;
 
   font-synthesis: none;
@@ -38,21 +37,13 @@ button {
   font-size: 1.2rem;
   cursor: pointer;
   padding: 0.8rem 1.5rem;
-  background: linear-gradient(
-    90deg,
-    rgba(221, 19, 184, 0.601) 0%,
-    rgba(46, 1, 43, 0.562) 100%
-  );
+  background: rgb(121, 36, 36);
   border-radius: 3rem;
   border: none;
 }
 
 button:hover {
   color: white;
-  background: linear-gradient(
-    90deg,
-    rgb(34, 15, 49) 0%,
-    rgb(106, 104, 104) 100%
-  );
+  background: black;
 }
 
