--- a/naregua/src/App.css
+++ b/naregua/src/App.css
@@ -1,35 +1,36 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  border-radius: 3rem;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  
-  background-size: cover;
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+html, body, #root {
+  height: 100%;
+}
+
+.container {
+  width: 100vw;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
+  background: #bebcba;
+ }
+ 
+ button {
+     color: rgb(255, 255, 255);
+     font-weight: bold;
+     font-size: 0.8rem;
+     cursor: pointer;
+     padding: 10px;
+     background:  #512f1f;
+     border-radius: 0.6rem ;
+     border: none;
+     margin-right: 15px;
+     justify-content: space-between;
+ }
+ 
+ button:hover {
+     color: white;
+     background: rgba(80, 54, 46, 0.81);
+ }     
 
 
