--- a/naregua/src/pages/Login.css
+++ b/naregua/src/pages/Login.css
@@ -1,4 +1,4 @@
-.container {
+.containerL {
     width: 450px;
     background: rgba(0, 0, 0, 0.15);
     backdrop-filter: blur(10px);
@@ -7,13 +7,13 @@
     padding: 40px;
   }
   
-  .container h1 {
+  .containerL h1 {
     text-align: center;
     font-size: 30px;
     color: #ffff;
   }
   
-  .container .input-field {
+  .containerL .input-field {
     position: relative;
     width: 100%;
     height: 50px;
@@ -45,7 +45,7 @@
     color: #fff;
   }
   
-  .container .recall-forget {
+  .containerL .recall-forget {
     display: flex;
     justify-content: space-between;
     font-size: 14.5px;
@@ -68,7 +68,7 @@
   
  
   
-  .container .signup-link {
+  .containerL .signup-link {
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
