--- a/naregua/src/pages/Home.css
+++ b/naregua/src/pages/Home.css
@@ -3,12 +3,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #fff;
+    background: #ffffff86;
     padding: 15px 7%;
+    
 }
 
 .logo {
-    width: 80px;
+    width: 90px;
     cursor: pointer;
 }
 
@@ -23,9 +24,22 @@ ul li {
     margin: 10px 20px;
     font-size: 18px;
     cursor: pointer;
+    padding-right: 110px;
 }
 
+.container-home{
+    color: white;
+    
+}
+.container-home h1 {
+    text-align: justify;
+    font-size:40px;
+}
 
+.container-home p {
+    font-size: 30px;
+    text-align: justify;
+}
 
 
 
