alterando fontes e background

--- a/naregua/src/App.css
+++ b/naregua/src/App.css
@@ -14,8 +14,9 @@ html, body, #root {
   width: 100vw;
   min-height: 100vh;
   background: #bebcba;
-  background-image: url('https://conteudo.solutudo.com.br/wp-content/uploads/2020/01/BARBEARIA-ARACAJU-BARBEIRO-MESTRE.png');
+  background-image: url('https://heygoldie.com/blog/wp-content/uploads/2021/12/barber-shop-decor-ideas.jpg');
   background-size: cover;
+  background-position: center;
  }
  
  button {
