--- a/naregua/src/pages/Login.css
+++ b/naregua/src/pages/Login.css
@@ -1,3 +1,13 @@
+#root {
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+
 .containerL {
   width: 450px;
   background: rgba(0, 0, 0, 0.388);
@@ -66,8 +76,6 @@
 .recall-forget a:hover {
   text-decoration: underline;
 }
-
-
 
 .containerL .signup-link {
   font-size: 14.5px;
