--- a/naregua/src/pages/Agendamento.css
+++ b/naregua/src/pages/Agendamento.css
@@ -4,12 +4,14 @@
     align-items: center;
     justify-content: center;
     margin: 50px auto;
-    padding: 20px 30px;
     width: 100%;
-    max-width: 400px;
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 600px; /* Limite a largura do formulário se necessário */
+    margin: 0 auto; /* Centraliza o formulário */
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .agendamento-title {
@@ -46,6 +48,21 @@
 
 label{
     color: black;
+}
+.agendamento-checkboxes {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap; /* Faz as caixinhas se moverem para a linha seguinte, se necessário */
+    gap: 1px; /* Espaçamento entre as caixinhas */
+    justify-content: flex-start; /* Alinha as caixinhas à esquerda */
+}
+
+.agendamento-checkboxes label {
+    display: flex;
+    align-items: center; /* Alinha o texto verticalmente com a caixinha */
+    gap: 10px; /* Espaçamento entre a caixinha e o texto */
+    flex-basis: 30%; /* Ajusta a largura das caixinhas (pode modificar conforme necessário) */
+    margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
