Commit by Thiago botão login

--- a/naregua/src/pages/Home.css
+++ b/naregua/src/pages/Home.css
@@ -84,7 +84,7 @@ ul li {
  font-size: 1.1rem;
  cursor: pointer;
  padding: 8px 15px;
- background: #ffbb13;; 
+ background: #ffbb13; 
  border-radius: 8px;
  border: none;
 }
