--- a/naregua/src/pages/Login.css
+++ b/naregua/src/pages/Login.css
@@ -15,6 +15,7 @@
   border-radius: 10px;
   padding: 40px;
   justify-content: center;
+  margin-top: 70px;
 }
 
 .containerL h1 {
@@ -90,4 +91,10 @@
 
 .signup-link p a:hover {
   text-decoration: underline;
+}
+
+.buttonL {
+  background: #ffbb13;
+  margin-left: 50px;
+  width: 250px;
 }
