--- a/naregua/src/pages/Cadastro.css
+++ b/naregua/src/pages/Cadastro.css
@@ -21,7 +21,7 @@ body {
 h2 {
   text-align: center;
   margin-bottom: 20px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 label {
@@ -45,18 +45,15 @@ input[type="date"] {
 }
 
 input[type="submit"] {
-  width: 100%;
-  background-color: #007bff;
-  color: white;
-  padding: 12px;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
+  background: #ffbb13;
+  margin-left: 50px;
+  width: 250px;
 }
 
 input[type="submit"]:hover {
-  background-color: #0056b3;
+  background: #ffbb13;
+  margin-left: 50px;
+  width: 250px;
 }
 
 p {
