--- a/naregua/src/pages/Home.css
+++ b/naregua/src/pages/Home.css
@@ -1,277 +1,284 @@
-#root{
-    background-color: rgb(255, 255, 255);
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+#root {
+  background-color: rgb(255, 255, 255);
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 .container-home {
-    color: rgb(0, 0, 0);
-    }
-
-.container-home h1 {
-    font-size: 40px;
-    
-    }
-
-.container-home p {
-    font-size: 30px;
-    color: white;
-    font-family: "Archivo Black", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-}
-
-h1{
-    font-size: 30px;
-    text-align: justify;
-    font-family: "Archivo Black", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-}
-
-.navbar {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2px 2%;
-    background-color: #000000;
-}
-
-.logo {
-    width: 90px;
-    cursor: pointer;
-}
-
-ul{
-    flex: 1;
-    list-style: none;
-    text-align: center;
-}
-
-ul li {
-    display: inline-block;
-    margin: 10px 20px;
-    font-size: 18px;
-    cursor: pointer;
-    color: #f9f6f6; /* Cor preta para texto */
-}
-
-.navbar ul {
-    display: flex;
-    justify-content: center; /* Centraliza os links no navbar */
-    gap: 20px; /* Espaçamento entre os links */
-}
-
-
-.navbar ul li a {
-    text-decoration: none;
-    color: #ffffff; /* Cor preta para os links */
-    font-weight: bold;
-    width: 100%;
-}
-.navbar-container {
-    width: 100%;
-    background-color: #ffffff; /* Cor do fundo desejada */
-}
-
-.buttonAG {
- margin: 350px;
- margin-top: 0;
- color: #ffffff;
- font-weight: bold;
- font-size: 1.1rem;
- cursor: pointer;
- padding: 8px 15px;
- background: #ffbb13; 
- border-radius: 8px;
- border: none;
-}
-
-.buttonsLC {
-    display: flex;
-    gap: 10px; /* Espaçamento entre os botões */
-    margin: 0; /* Remove margem */
-    padding: 0; /* Remove padding */
-}
-
-.buttonsLC button {
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 1.1rem;
-    cursor: pointer;
-    padding: 8px 15px;
-    background: #ffbb13;;
-    border-radius: 8px;
-    border: none;
-}
-
-.buttonsLC button:hover {
-    background: rgba(80, 54, 46, 0.81);
-}
-
-.container-home {
-    color: rgb(255, 255, 255);
-    text-align: center;
+  color: rgb(0, 0, 0);
 }
 
 .container-home h1 {
-    font-size: 40px;
-    font-family: "Archivo Black", sans-serif;
-    font-weight: 400;
-    color: black;
+  font-size: 40px;
 }
 
 .container-home p {
-    font-size: 25px;
-    font-family: "Archivo Black", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-    color: rgb(255, 255, 255); /* Garante que o texto permaneça branco */
-    
+  font-size: 30px;
+  color: white;
+  font-family: "Archivo Black", sans-serif;
+  font-weight: 400;
+  font-style: italic;
 }
 
 h1 {
-    font-size: 30px;
-    text-align: justify;
-    font-family: "Archivo Black", sans-serif;
-    font-weight: 400;
-    font-style: italic;
+  font-size: 30px;
+  text-align: justify;
+  font-family: "Archivo Black", sans-serif;
+  font-weight: 400;
+  font-style: italic;
 }
 
+.navbar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2px 2%;
+  background-color: #000000;
+}
+
+.logo {
+  width: 90px;
+  cursor: pointer;
+}
+
+ul {
+  flex: 1;
+  list-style: none;
+  text-align: center;
+}
+
+ul li {
+  display: inline-block;
+  margin: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  color: #f9f6f6; /* Cor preta para texto */
+}
+
+.navbar ul {
+  display: flex;
+  justify-content: center; /* Centraliza os links no navbar */
+  gap: 20px; /* Espaçamento entre os links */
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: #ffffff; /* Cor preta para os links */
+  font-weight: bold;
+  width: 100%;
+}
+.navbar-container {
+  width: 100%;
+  background-color: #ffffff; /* Cor do fundo desejada */
+}
+
+.buttonAG {
+  margin: 350px;
+  margin-top: 0;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 1.1rem;
+  cursor: pointer;
+  padding: 8px 15px;
+  background: #ffbb13;
+  border-radius: 8px;
+  border: none;
+}
+
+.buttonsLC {
+  display: flex;
+  gap: 10px; /* Espaçamento entre os botões */
+  margin: 0; /* Remove margem */
+  padding: 0; /* Remove padding */
+}
+
+.buttonsLC button {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 1.1rem;
+  cursor: pointer;
+  padding: 8px 15px;
+  background: #ffbb13;
+  border-radius: 8px;
+  border: none;
+}
+
+.buttonsLC button:hover {
+  background: rgba(80, 54, 46, 0.81);
+}
+
+.container-home {
+  color: rgb(255, 255, 255);
+  text-align: center;
+}
+
+.container-home h1 {
+  font-size: 40px;
+  font-family: "Archivo Black", sans-serif;
+  font-weight: 400;
+  color: black;
+}
+
+.container-home p {
+  font-size: 35px;
+  font-family: "Archivo Black", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+  color: rgb(255, 255, 255); /* Garante que o texto permaneça branco */
+  text-align:inherit;
+ 
+ 
+}
+
+h1 {
+  font-size: 30px;
+  text-align: justify;
+  font-family: "Archivo Black", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
 
 section {
-    height: 100vh; /* Cada seção ocupa a altura total da tela */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    margin: 0; /* Remove margem */
+  height: 100vh; /* Cada seção ocupa a altura total da tela */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  margin: 0; /* Remove margem */
 }
 
-#sobre{
-background-image: url('https://conteudo.solutudo.com.br/wp-content/uploads/2020/01/BARBEARIA-ARACAJU-BARBEIRO-MESTRE.png');
-background-size: cover;
+#sobre {
+  background-image: url("https://conteudo.solutudo.com.br/wp-content/uploads/2020/01/BARBEARIA-ARACAJU-BARBEIRO-MESTRE.png");
+  background-size: cover;
 }
 #servicos {
-    background-color: #ffffff;
-    margin-top: 0; /* Remove margem superior de seção */
+  background-color: #ffffff;
+  margin-top: 0; /* Remove margem superior de seção */
 }
 
 #equipe {
-    background-color: #120f0f;
+  background-color: #120f0f;
 }
 
 #contato {
-    background-color:#ffffff;
-    color: black;
+  background-color: #ffffff;
+  color: black;
 }
-h1{
-    color:  rgb(0, 0, 0);
+h1 {
+  color: rgb(0, 0, 0);
 }
 .Services {
-    width: 100%;
-    padding-top: 330px;
-    margin: 0 auto;
-    min-height: 00vh;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    max-width: 900px;
-    text-align: justify;
+  width: 100%;
+  padding-top: 330px;
+  margin: 0 auto;
+  min-height: 00vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 900px;
+  text-align: justify;
 }
-.inner{
-    display: flex;
-}
-
-.item{
-    min-height: 200px;
-    min-width: 300px;
-    padding: 5px;
-
+.inner {
+  display: flex;
 }
 
-.item img{
-    width: 250px;
-    height: 90%;
-    border-radius: 30px;
-    justify-content: space-between;
-    pointer-events: none;
+.item {
+  min-height: 200px;
+  min-width: 300px;
+  padding: 5px;
+  
 }
 
-.itemEQ{
-    min-height: 200px;
-    min-width: 300px;
-    padding: 5px;
-
+.item img {
+  width: 250px;
+  height: 90%;
+  border-radius: 30px;
+  justify-content: space-between;
+  pointer-events: none;
 }
 
-.itemEQ img{
-    width: 250px;
-    height: 90%;
-    border-radius: 250px;
-    justify-content: space-between;
-    pointer-events: none;
+.itemEQ {
+  min-height: 200px;
+  min-width: 300px;
+  padding: 10px;
+  margin-top: 60px;
 }
 
-.carousel{
-    cursor: grab;
-    overflow: hidden;
-    
+.itemEQ img {
+  width: 270px;
+  height: 90%;
+  border-radius: 250px;
+  justify-content: space-between;
+  pointer-events: none;
+  object-fit: cover;
 }
 
-.Services .carousel h1{
-    text-align: center;
-    justify-content: center;
-    padding: 20px;
-    color: rgb(0, 0, 0);
+.itemEQ p {
+  margin-top: 10px; /* Espaço entre imagem e texto */
+  font-size: 1.2em;
+  
+}
+.carousel {
+  overflow: hidden;
 }
 
-.Equipe .carousel h1{
-    text-align: center;
-    justify-content: center;
-    padding: 20px;
-    color: rgb(255, 255, 255);
+.Services .carousel h1 {
+  text-align: center;
+  justify-content: center;
+  padding: 20px;
+  color: rgb(0, 0, 0);
+  
 }
 
-.carousel button{
-text-align: center;
-    align-items: center;
+.Equipe .carousel h1 {
+  text-align: center;
+  justify-content: center;
+  padding: 10px;
+  color: rgb(255, 255, 255);
+
+  
+}
+.Equipe p {
+  color: white;
+  font-family: "Archivo Black", sans-serif;
+  justify-content: space-between;
+}
+.carousel button {
+  text-align: center;
+  align-items: center;
 }
 
 .Footer {
-    background-color: black;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  text-align: center;
 }
 
 .Footer ul a {
-    color: #ffffff;
-    margin: 0.4rem;
-    font-size: 1.5rem;
-    cursor: pointer;
-    
+  color: #ffffff;
+  margin: 0.4rem;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
 .Footer ul a:hover {
-    color:#ffbb13;
+  color: #ffbb13;
 }
 
-
 .copy_right span {
-    font-weight: bold;
-    color:#ffbb13;
+  font-weight: bold;
+  color: #ffbb13;
 }
 
 .mapa h1 {
-    text-align: center;
-    height: 100px;
-    font-family: "Archivo Black", sans-serif;
+  text-align: center;
+  height: 100px;
+  font-family: "Archivo Black", sans-serif;
 }
 .mapa p {
-    text-align: center;
-    font-family: "Archivo Black", sans-serif;
+  text-align: center;
+  font-family: "Archivo Black", sans-serif;
 }
