--- a/naregua/src/pages/Login.css
+++ b/naregua/src/pages/Login.css
@@ -7,6 +7,11 @@
   min-height: 100vh;
 }
 
+body {
+  background: url('https://i.pinimg.com/736x/78/92/e8/7892e82565b125180acb25318ad6ec9c.jpg');
+  background-size: cover;
+}
+
 .containerL {
   width: 450px;
   background: rgba(0, 0, 0, 0.388);
@@ -18,11 +23,6 @@
   margin-top: 70px;
 }
 
-.containerL h1 {
-  text-align: center;
-  font-size: 30px;
-  color: #ffff;
-}
 
 .containerL .input-field {
   position: relative;
@@ -97,4 +97,15 @@
   background: #ffbb13;
   margin-left: 50px;
   width: 250px;
+}
+
+.logoL {
+  width: 90px;
+  cursor: pointer;
+  align-items: center;
+  margin-left: 125px;
+}
+
+.pL{
+  color: #fff;
 }
