imagem fundo mapa

--- a/naregua/src/pages/Home.css
+++ b/naregua/src/pages/Home.css
@@ -164,10 +164,12 @@ section {
 
 #contato {
   background-color: #ffffff;
-  color: black;
+  color: rgb(255, 255, 255);
+  background-image: url('https://images.unsplash.com/photo-1613762816121-427fe1f2329d?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGZhdmVsYXxlbnwwfHwwfHx8MA%3D%3D');
+  background-size: cover;
 }
 h1 {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 .Services {
   width: 100%;
@@ -278,6 +280,7 @@ h1 {
   text-align: center;
   height: 100px;
   font-family: "Archivo Black", sans-serif;
+  
 }
 .mapa p {
   text-align: center;
