Commit by Thiago estilizando navbar

--- a/naregua/src/pages/Agendamento.css
+++ b/naregua/src/pages/Agendamento.css
@@ -32,7 +32,7 @@
     border: 2px solid rgba(255, 255, 255, 0.2);
     border-radius: 40px;
     font-size: 16px;
-
+    color: #ffffff;
 }
 
 .agendamento-button {
@@ -78,4 +78,8 @@ label {
 
 .pA {
     color: #ffffff;
+}
+
+option {
+    color: black;
 }
