--- a/naregua/src/pages/Home.css
+++ b/naregua/src/pages/Home.css
@@ -308,6 +308,8 @@ h1 {
 .carousel button {
   text-align: center;
   align-items: center;
+  text-decoration: none;
+  color: white;
 }
 
 .Footer {
