--- a/naregua/src/pages/Login.css
+++ b/naregua/src/pages/Login.css
@@ -8,14 +8,14 @@
 }
 
 body {
-  background: url('https://i.pinimg.com/736x/78/92/e8/7892e82565b125180acb25318ad6ec9c.jpg');
+  background: url('./img/fnd1.jpg');
   background-size: cover;
 }
 
 .containerL {
   width: 450px;
-  background: rgba(0, 0, 0, 0.388);
-  backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.337);
+  backdrop-filter: blur(3px);
   border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 10px;
   padding: 40px;
